js/src/tests/test262/built-ins/Error/prototype/stack/getter-foreign-new-target.js






















var get = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').get;

function NotAnError() {}

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var e = Reflect.construct(Ctor, ['msg'], NotAnError);

  assert.sameValue(
    Object.getPrototypeOf(e),
    NotAnError.prototype,
    Ctor.name + ': [[Prototype]] is the new.target prototype'
  );

  
  
  assert.sameValue(typeof get.call(e), 'string', Ctor.name + ': via get.call');

  
  
  
  
  assert.sameValue(e.stack, undefined, Ctor.name + ': property access returns undefined');
}

reportCompare(0, 0);
